updating skill highlights to include all relevant soft skills; mention ABCE OS

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -30,7 +30,7 @@
   \item \textbf{Creator and lead developer} for the Agent-Based Capacity Expansion (ABCE) code
     \begin{itemize}
       \setlength{\itemsep}{-3pt}
-      \item \textbf{Skill highlights: Python, Julia, SQLite, automated Excel templating, git/software development}
+      \item \textbf{Skill highlights: Python, Julia, SQLite, economic modeling, software development and integration}
       \item Developing the ABCE code, which simulates generation asset investment decisions of independent utility companies competing in a wholesale electricity market
         \begin{itemize}
           \item Agents attempt to maximize their own generation portfolio's valuation via new construction projects and asset retirements
@@ -38,12 +38,13 @@
           \item Feasible behaviors are limited by agents' evolving ability to issue financing instruments, which are issued in real time and tracked on continuously updated debt schedules
         \end{itemize}
       \item Developed flexible data structures and interfaces to allow bidirectional ABCE coupling with external codes
+      \item Planned and approved for open-source github release under the Apache License v2.0; currently in private internal beta
     \end{itemize}
 
   \item \textbf{Technical analyst} for the \href{https://www.energy.gov/gdo/civil-nuclear-credit-program}{Civil Nuclear Credit (CNC) Program}
   \begin{itemize}
     \setlength{\itemsep}{-3pt}
-    \item \textbf{Skill highlights: Excel modeling, economic modeling, literature review, executive stakeholder communication}
+    \item \textbf{Skill highlights: Excel modeling, economic modeling, domain research/literature review, executive stakeholder communication}
     \item Developed an Excel operating profit model (based solely on public information) for all U.S. commercial nuclear reactor units, to analyze the impacts of state and federal subsidy programs and variations in revenue and cost levels
     \item Researched and modeled state nuclear subsidy programs (CT, NY, NJ, IL) and the federal production tax credit introduced in the Inflation Reduction Act (2022): structure, compensation levels, terms and conditions
     \item Performed sensitivity analyses on assumptions to provide context and more robust conclusions
@@ -53,7 +54,7 @@
   \item \textbf{Technoeconomic analyst} for the \href{https://www.energy.gov/ne/articles/doe-report-finds-hundreds-retiring-coal-plant-sites-could-convert-nuclear}{Department of Energy coal-to-nuclear transitions report}
   \begin{itemize}
     \setlength{\itemsep}{-3pt}
-    \item \textbf{Skill highlights: ABCE, literature review}
+    \item \textbf{Skill highlights: economic modeling, domain research/literature review, public communication}
     \item Developed conceptual and quantitative models of technoeconomic factors affecting feasibility of coal-to-nuclear conversion projects
     \item Developed exemplar project schedules for all project types to model the critical economic impacts of the ``revenue gap" (unavoidable zero-revenue period between coal plant shutdown and nuclear plant startup on the same site, mandatory in some projects due to equipment refurbishment and/or site remediation)
     \item Developed models of activities and costs required to decommission CPPs and manage coal waste facilities
@@ -75,7 +76,7 @@
   \setlength{\itemsep}{-3pt}
   \item Economic modeling and regulatory rate-case support for utility client capital investment planning process
   \begin{itemize}
-    \item \textbf{Skill highlights: Excel modeling, construction cost modeling, executive stakeholder communication, regulatory affairs}
+    \item \textbf{Skill highlights: Excel modeling, construction cost modeling, executive/public stakeholder communication, regulatory affairs}
     \item Developed valuation model of client firm and transmission infrastructure capital investment plan (\$10B over 10 years), to model client's contemplated transition from one prime construction contractor to a better-performing competitor, incorporating scenarios and sensitivity studies
     \item Researched regulatory and rate-setting processes in client's jurisdiction in order to estimate impacts of high construction cost unpredictability on regulatory burden
     \item Authored evidentiary documents in defense of this and other work performed for the same client, which led to the relevant ratemaking authority ruling in favor of the client's improved capital investment plan
