--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -15,7 +15,7 @@
     pdfpagemode=FullScreen
 }
 
-\name{K a t i e \:\: B i e g e l} % Your name
+\name{K\,a\,t\:i\:e\;\;\;B\:i\:e\:g\:e\:l} % Your name
 \address{(480)~$\cdot$~298~$\cdot$~9444 \\ kbiegel@anl.gov } % Your phone number and email
 
 \begin{document}
@@ -30,34 +30,35 @@
   \item \textbf{Creator and lead developer} for the Agent-Based Capacity Expansion (ABCE) code
     \begin{itemize}
       \setlength{\itemsep}{-3pt}
-      \item \textbf{Experience highlights: Python, Julia, SQLite, economic modeling, software development and integration}
+      \item \textbf{Experience highlights: Python, Julia, SQLite, economic modeling, software development}
       \item Developing the ABCE code, which simulates generation asset investment decisions of independent utility companies competing in a wholesale electricity market
         \begin{itemize}
-          \item Agents attempt to maximize their own generation portfolio's valuation via new construction projects and asset retirements
+          \item Agents (utilities) attempt to maximize their own generation portfolio's valuation via new construction projects and asset retirements
           \item Agents make financial projections based on public information and their internal expectations about future events, using their own private models of future electricity market outcomes and full pro-forma company financial statements
           \item Feasible behaviors are limited by agents' evolving ability to issue financing instruments, which are issued in real time and tracked on continuously updated debt schedules
         \end{itemize}
-      \item Developed flexible data structures and interfaces to allow bidirectional ABCE coupling with external codes
-      \item Planned and approved for open-source github release under the Apache License v2.0; currently in private internal beta
+      \item Developed flexible data structures and interfaces to allow bidirectional ABCE coupling with external codes; currently working to integrate ABCE with another national lab's software toolset at their request
+      \item Approved for open-source github release under the Apache License v2.0; currently in private internal beta
     \end{itemize}
 
   \item \textbf{Technical analyst} for the \href{https://www.energy.gov/gdo/civil-nuclear-credit-program}{Civil Nuclear Credit (CNC) Program}
   \begin{itemize}
     \setlength{\itemsep}{-3pt}
     \item \textbf{Experience highlights: Excel modeling, economic modeling, domain research/literature review, executive stakeholder communication}
-    \item Developed an Excel operating profit model (based solely on public information) for all U.S. commercial nuclear reactor units, to analyze the impacts of state and federal subsidy programs and variations in revenue and cost levels
+    \item Developed an Excel operating profit model (based solely on public information) for all U.S. commercial nuclear reactor units, to analyze trends in generator profitability and characterize the impacts of state and federal subsidy programs
     \item Researched and modeled state nuclear subsidy programs (CT, NY, NJ, IL) and the federal production tax credit introduced in the Inflation Reduction Act (2022): structure, compensation levels, terms and conditions
-    \item Performed sensitivity analyses on assumptions to provide context and more robust conclusions
-    \item Wrote 12-page analysis summary report for CNC leadership before the first CNC award cycle
+    \item Performed sensitivity analyses on cost and revenue estimation methods to assess robustness of conclusions
+    \item Wrote analysis summary report for CNC leadership
+    \item Continuing to maintain Excel model and update analysis in response to requests
   \end{itemize}
 
-  \item \textbf{Technoeconomic analyst} for the \href{https://www.energy.gov/ne/articles/doe-report-finds-hundreds-retiring-coal-plant-sites-could-convert-nuclear}{Department of Energy coal-to-nuclear transitions report}
+  \item \textbf{Technoeconomic analyst} for the \href{https://www.energy.gov/ne/articles/doe-report-finds-hundreds-retiring-coal-plant-sites-could-convert-nuclear}{2022 Department of Energy coal-to-nuclear transitions report}
   \begin{itemize}
     \setlength{\itemsep}{-3pt}
     \item \textbf{Experience highlights: economic modeling, domain research/literature review, public communication}
     \item Developed conceptual and quantitative models of technoeconomic factors affecting feasibility of coal-to-nuclear conversion projects
-    \item Developed exemplar project schedules for all project types to model the critical economic impacts of the ``revenue gap" (unavoidable zero-revenue period between coal plant shutdown and nuclear plant startup on the same site, mandatory in some projects due to equipment refurbishment and/or site remediation)
-    \item Developed models of activities and costs required to decommission CPPs and manage coal waste facilities
+    \item Developed exemplar project schedules for all project types to model the economic impacts of the ``revenue gap" (unavoidable zero-revenue period between coal plant shutdown and nuclear plant startup on the same site, mandatory in some projects due to equipment refurbishment and/or site remediation)
+    \item Developed models of activities and costs required to decommission and remediate coal plant sites
     \item Used ABCE to model decision drivers and utility firms' preferences among possible types of coal-to-nuclear conversion projects
   \end{itemize}
 
@@ -77,7 +78,7 @@
   \item Economic modeling and regulatory rate-case support for utility client capital investment planning process
   \begin{itemize}
     \item \textbf{Experience highlights: Excel modeling, construction cost modeling, executive/public stakeholder communication, regulatory affairs}
-    \item Developed valuation model of client firm and transmission infrastructure capital investment plan (\$10B over 10 years), to model client's contemplated transition from one prime construction contractor to a better-performing competitor, incorporating scenarios and sensitivity studies
+    \item Developed valuation model of client firm and transmission infrastructure capital investment plan (\$10B over 10 years), to model client's proposed transition from one prime construction contractor to a better-performing competitor, incorporating scenarios and sensitivity studies
     \item Researched regulatory and rate-setting processes in client's jurisdiction in order to estimate impacts of high construction cost unpredictability on regulatory burden
     \item Authored evidentiary documents in defense of this and other work performed for the same client, which led to the relevant ratemaking authority ruling in favor of the client's improved capital investment plan
     \item Regularly presented results to, solicited feedback from, and cultivated buy-in with client executive-level point of contact
@@ -86,7 +87,7 @@
 
 %------------------------------------------------------------------------------
 
-\begin{rSubsection}{Undergraduate Researcher}{June 2013 - June 2015}{Massachusetts Institute of Technology, Prof. Scott Kemp}{Cambridge, MA}
+\begin{rSubsection}{Undergraduate Researcher}{June 2013 - June 2015}{Massachusetts Institute of Technology}{Cambridge, MA}
   \setlength{\itemsep}{-3pt}
   \item Senior thesis: financial modeling of schedule escalation impacts on nuclear power plant construction projects
 \end{rSubsection}
