updating header to be more informative for a non-US audience

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -15,8 +15,9 @@
     pdfpagemode=FullScreen
 }
 
-\name{K\,a\,t\:i\:e\;\;\;B\:i\:e\:g\:e\:l} % Your name
-\address{(480)~$\cdot$~298~$\cdot$~9444 \\ biegelk3@gmail.com } % Your phone number and email
+\name{K\,a\,t\:i\:e\;\;\;B\:i\:e\:g\:e\:l}
+\address{+1~$\cdot$~(480)~$\cdot$~298~$\cdot$~9444 \\ biegelk3@gmail.com }
+\address{5202 S. Cornell Ave., Apt. 3D, Chicago IL USA 60615}
 
 \begin{document}
 
