--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -16,7 +16,7 @@
 }
 
 \name{K\,a\,t\:i\:e\;\;\;B\:i\:e\:g\:e\:l} % Your name
-\address{(480)~$\cdot$~298~$\cdot$~9444 \\ kbiegel@anl.gov } % Your phone number and email
+\address{(480)~$\cdot$~298~$\cdot$~9444 \\ biegelk3@gmail.com } % Your phone number and email
 
 \begin{document}
 
