condensing overly-long items

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -27,68 +27,57 @@
 
 \begin{rSection}{Work Experience}
 
-\begin{rSubsection}{Graduate Researcher}{September 2018 -- present}{Argonne National Laboratory}{Lemont, IL}
+\begin{rSubsection}{Graduate Researcher}{September 2018 -- present}{Argonne National Laboratory}{Lemont, IL, USA}
   \item \textbf{Creator and lead developer} for the Agent-Based Capacity Expansion (ABCE) code
     \begin{itemize}
       \setlength{\itemsep}{-3pt}
-      \item \textbf{Experience highlights: Python, Julia, SQLite, economic modeling, software development}
-      \item Developing the ABCE code, which simulates generation asset investment decisions of independent utility companies competing in a wholesale electricity market
-        \begin{itemize}
-          \item Agents (utilities) attempt to maximize their own generation portfolio's valuation via new construction projects and asset retirements
-          \item Agents make financial projections based on public information and their internal expectations about future events, using their own private models of future electricity market outcomes and full pro-forma company financial statements
-          \item Feasible behaviors are limited by agents' evolving ability to issue financing instruments, which are issued in real time and tracked on continuously updated debt schedules
-        \end{itemize}
-      \item Developed flexible data structures and interfaces to allow bidirectional ABCE coupling with external codes; currently working to integrate ABCE with another national lab's software toolset at their request
-      \item Approved for open-source github release under the Apache License v2.0; currently in private internal beta
+      \item \textbf{Experience highlights: Python, Julia, SQLite databases, optimization, economic modeling}
+      \item ABCE simulates generation asset investment decisions of independent utility companies competing in a wholesale electricity market
+      \item Implemented flexible capabilities for carbon taxes, ITCs, and multiple types of PTC
+      \item Developed market representations for Texas and Illinois (PJM/MISO) grid regions by extracting historical market data on generation mix and timeseries data for demand, wind, solar, and ancillary services
     \end{itemize}
 
-  \item \textbf{Technical analyst} for the \href{https://www.energy.gov/gdo/civil-nuclear-credit-program}{Civil Nuclear Credit (CNC) Program}
+  \item \textbf{Market and policy analyst} for the U.S. Department of Energy's Civil Nuclear Credit (CNC) Program
   \begin{itemize}
     \setlength{\itemsep}{-3pt}
-    \item \textbf{Experience highlights: Excel modeling, economic modeling, domain research/literature review, executive stakeholder communication}
-    \item Developed an Excel operating profit model (based solely on public information) for all U.S. commercial nuclear reactor units, to analyze trends in generator profitability and characterize the impacts of state and federal subsidy programs
-    \item Researched and modeled state nuclear subsidy programs (CT, NY, NJ, IL) and the federal production tax credit introduced in the Inflation Reduction Act (2022): structure, compensation levels, terms and conditions
-    \item Performed sensitivity analyses on cost and revenue estimation methods to assess robustness of conclusions
+    \item \textbf{Experience highlights: Excel modeling, economic modeling, ad-hoc analysis/reporting, domain research/literature review, executive stakeholder communication}
+    \item CNC program goal: provide financial support to nuclear reactors in the U.S. which are struggling to compete in wholesale markets, based on assessment of each applicant unit's financial shortfall
+    \item Developed an Excel operating profit model for all U.S. commercial nuclear reactor units, to analyze trends in generator profitability and characterize the impacts of state and federal subsidy programs
+    \item Researched and modeled impacts of state and federal nuclear subsidy programs (multiple types of PTCs, PPAs): structure, compensation levels, terms and conditions
     \item Wrote analysis summary report for CNC leadership
-    \item Continuing to maintain Excel model and update analysis in response to requests
+    \item Ongoing ad-hoc analyses, scenario studies, and model expansions in response to U.S. federal government requests
+    \item Note: work described in this section is based solely on publicly-available information
   \end{itemize}
 
-  \item \textbf{Technoeconomic analyst} for the \href{https://www.energy.gov/ne/articles/doe-report-finds-hundreds-retiring-coal-plant-sites-could-convert-nuclear}{2022 Department of Energy coal-to-nuclear transitions report}
+  \item \textbf{Technoeconomic analyst} for the 2022 Department of Energy coal-to-nuclear transitions report and the 2023 extension study (in progress)
   \begin{itemize}
     \setlength{\itemsep}{-3pt}
-    \item \textbf{Experience highlights: economic modeling, domain research/literature review, public communication}
+    \item \textbf{Experience highlights: economic modeling, domain research/literature review}
     \item Developed conceptual and quantitative models of technoeconomic factors affecting feasibility of coal-to-nuclear conversion projects
-    \item Developed exemplar project schedules for all project types to model the economic impacts of the ``revenue gap" (unavoidable zero-revenue period between coal plant shutdown and nuclear plant startup on the same site, mandatory in some projects due to equipment refurbishment and/or site remediation)
     \item Developed models of activities and costs required to decommission and remediate coal plant sites
-    \item Used ABCE to model decision drivers and utility firms' preferences among possible types of coal-to-nuclear conversion projects
-  \end{itemize}
-
-  \item \textbf{Other projects and publications}
-  \begin{itemize}
-    \item \href{https://www.osti.gov/biblio/1891624}{Impact of electric vehicle charging schedules on electricity markets and nuclear generators (Sept. 2022)}
-    \item \href{https://www.osti.gov/biblio/1822217}{February 2021 electricity blackouts and natural gas shortages in Texas (July 2021)}
-    \item \href{https://www.osti.gov/biblio/1701718}{Economic impacts of nuclear power plant load-following capabilities (Sept. 2020)}
+    \item Using ABCE to model decision drivers and utility firms' preferences among possible types of coal-to-nuclear conversion projects
   \end{itemize}
 
 \end{rSubsection}
 
 %------------------------------------------------------------------------------
 
-\begin{rSubsection}{Energy Consulting Manager}{July 2015 -- July 2017}{PowerAdvocate, Inc.}{Boston, MA}
+\begin{rSubsection}{Energy Consulting Manager}{July 2015 -- July 2017}{PowerAdvocate, Inc.}{Boston, MA, USA}
   \setlength{\itemsep}{-3pt}
   \item Economic modeling and regulatory rate-case support for utility client capital investment planning process
   \begin{itemize}
-    \item \textbf{Experience highlights: Excel modeling, construction cost modeling, executive/public stakeholder communication, regulatory affairs}
+    \item \textbf{Experience highlights: Excel modeling, ad-hoc analysis/reporting, project cost modeling, executive/public stakeholder communication}
     \item Developed valuation model of client firm and transmission infrastructure capital investment plan (\$10B over 10 years), to model client's proposed transition from one prime construction contractor to a better-performing competitor, incorporating scenarios and sensitivity studies
     \item Researched regulatory and rate-setting processes in client's jurisdiction in order to estimate impacts of high construction cost unpredictability on regulatory burden
-    \item Authored evidentiary documents in defense of this and other work performed for the same client, which led to the relevant ratemaking authority ruling in favor of the client's improved capital investment plan
-    \item Regularly presented results to, solicited feedback from, and cultivated buy-in with client executive-level point of contact
+    \item Authored evidentiary documents in defense of this and other work performed for the same client, which led to the ratemaking authority ruling in favor of the client's improved capital investment plan
+    \item Regularly presented results to, solicited feedback from, and cultivated buy-in with client executive-level points of contact
   \end{itemize}
+  \item Researched migration patterns and macroeconomic availability drivers for skilled craft laborers across Canada, for annual study of utility craft labor costs
 \end{rSubsection}
 
 %------------------------------------------------------------------------------
 
-\begin{rSubsection}{Undergraduate Researcher}{June 2013 - June 2015}{Massachusetts Institute of Technology}{Cambridge, MA}
+\begin{rSubsection}{Undergraduate Researcher}{June 2013 - June 2015}{Massachusetts Institute of Technology}{Cambridge, MA, USA}
   \setlength{\itemsep}{-3pt}
   \item Senior thesis: financial modeling of schedule escalation impacts on nuclear power plant construction projects
 \end{rSubsection}
@@ -102,11 +91,11 @@
 
 \begin{rSection}{Education}
 
-\begin{rSubsection}{Doctoral Candidate in Nuclear Engineering}{August 2017 -- June 2023 (anticipated)}{University of Wisconsin--Madison, Department of Engineering Physics}{Madison, WI}
+\begin{rSubsection}{Doctoral Candidate in Nuclear Engineering}{August 2017 -- August 2023 (anticipated)}{University of Wisconsin--Madison, Department of Engineering Physics}{Madison, WI, USA}
   \item Advisors: Paul P. H. Wilson (UW--Madison); Nicolas Stauff (Argonne National Laboratory)
 \end{rSubsection}
 
-\begin{rSubsection}{Bachelor of Science in Nuclear Science and Engineering}{June 2015}{Massachusetts Institute of Technology, Department of Nuclear Science and Engineering}{Cambridge, MA}
+\begin{rSubsection}{Bachelor of Science in Nuclear Science and Engineering}{June 2015}{Massachusetts Institute of Technology, Department of Nuclear Science and Engineering}{Cambridge, MA, USA}
   \item Advisor: R. Scott Kemp (MIT)
 \end{rSubsection}
 
@@ -115,31 +104,5 @@
 
 
 
-
-%----------------------------------------------------------------------------------------
-%	SKILLS SECTION
-%----------------------------------------------------------------------------------------
-
-%\begin{rSection}{Skills}
-
-%\begin{tabular}{ @{} >{\large}l @{\hspace{6ex}} l }
-%Programming & Python; Julia; bash; git; Linux; SQLite \\
-%MS Excel & modeling; data analysis; templating/UI/entry validation \\
-%MS Powerpoint & technical/executive/layperson communication; infographics \\
-%\end{tabular}
-
-%\end{rSection}
-
-%----------------------------------------------------------------------------------------
-%	EXAMPLE SECTION
-%----------------------------------------------------------------------------------------
-
-%\begin{rSection}{Section Name}
-
-%Section content\ldots
-
-%\end{rSection}
-
-%----------------------------------------------------------------------------------------
 
 \end{document}
